--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </form>
               <input  class="forgot-hidden" name="radio_btn" id="radio_btn" type="radio">
               <label class="authorization__forgot desc-font"  id="radio_btn" name="radio_btn">Forgot password?  </label> 
-              <button class="authorization__btn">Log in</button> 
+              <button class="authorization__btn" type="submit">Log in</button> 
           </div>
       </section>
          
