поправил поля reset формы

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <h3 class="authorization__head">Login</h3>
               <p class="authorization__desc desc-size ">This is a secure system and you will need to provide your login details to access the site</p>
               <form action="#">
-                  <input class="form__input-name"  name="email" type="text" placeholder="User name">
+                  <input class="form__input-name"  name="name" type="text" placeholder="User name">
                   <input class="form__input-password"  name="password" type="password" placeholder="Password">
               </form>
               <label class="authorization__forgot desc-size"  for="radio_btn" name="radio_btn">Forgot password?</label>            
@@ -51,8 +51,8 @@
               <h3 class="authorization__head">Reset password</h3>
               <p class="authorization__desc desc-size ">This is a secure system and you will need to provide your login details to access the site</p>
               <form action="#">
-                  <input class="form__input-name"  name="email" type="text" placeholder="User name">
-                  <input class="form__input-password"  name="password" type="password" placeholder="Password">
+                  <input class="form__input-name"  name="name" type="text" placeholder="User name">
+                  <input class="form__input-password"  name="email" type="text" placeholder="Email adress">
               </form> 
               <label class="authorization__forgot authorization__forgot-back desc-size"  for="radio_btn-back" name="radio_btn">Back to log-in page</label>                                      
               <a class="authorization__btn" href="#">Reset password</a>                
